syntax = "proto3";

package io.products.centralProduct.api;

option java_outer_classname = "CentralProductApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
// import "io/products/central_product/domain/central_product_domain.proto";

service CentralProductService {
    option (kalix.codegen) = {
      // value_entity: {
      //   name: "io.products.centralProduct.domain.CentralProduct"
      //   entity_type: "central_products"
      //   state: "io.products.centralProduct.domain.CentralProductState"
      // }
      event_sourced_entity: {
        name: "io.products.centralProduct.domain.CentralProduct"
        entity_type: "central_products"
        state: "io.products.centralProduct.domain.CentralProductState"
        events: [
          "io.products.centralProduct.domain.CentralProductDeleted",
          "io.products.centralProduct.domain.CentralProductCreated"
          ]
      }
    };
  
    rpc CreateCentralProduct(CentralProduct) returns (google.protobuf.Empty);
    
    rpc GetCentralProduct(GetCentralProductRequest) returns (CentralProduct){
      option (google.api.http) = {
          post: "/get_central_product"
          body: "*"
      };
  };

    // rpc UpdateCentralProduct(CentralProduct) returns (google.protobuf.Empty);

    rpc DeleteCentralProduct(DeleteCentralProductRequest) returns (google.protobuf.Empty){
      option (google.api.http) = {
          post: "/delete-central-product"
          body: "*"
      };
  };

}

message CentralProduct {
    string id = 1 [(kalix.field).entity_key = true];
    string productId = 2;
    string centralId = 3;

    repeated CentralProductAttribute centralProductAttribute = 4;
    repeated CentralProductVariantGroup centralProductVariantGroup = 5;
    repeated CentralProductOptionGroup centralProductOptionGroup = 6;
    bool isDeleted = 7;

}

message GetCentralProductRequest {
  string id = 1  [(kalix.field).entity_key = true];
}
message DeleteCentralProductRequest {
    string id = 1 [(kalix.field).entity_key = true];
}

message CentralProductAttribute {
  string attrId = 1 [(kalix.field).entity_key = true];
  string cntrlAttrName = 2;
  string cntrlAttrType = 3;
  string value = 4;
  bool isCommon = 5;
  
}


message CentralProductVariantGroup {
  repeated CentralProductVariant centralProductVariant = 1;
}


message CentralProductVariant {
  string vrntId = 1 [(kalix.field).entity_key = true];
  string cntrlVrntName = 2;
  string cntrlVrntType = 3;
  string value = 4;
}

message CentralProductOptionGroup {
  repeated CentralProductOption centralProductOption = 1;
}


message CentralProductOption {
  string optnId = 1 [(kalix.field).entity_key = true];
  string cntrlOptnName = 2;
  string cntrlOptnType = 3;
  string value = 4;
}

message CentralProductHttpResponse {
  string status = 1;
  string description = 2;
  // You can add more fields as needed.
}